fixing secondary menu horizontal scroll

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -337,7 +337,7 @@ body:not(:has(*)) {
   transition: 0.5s;
 }
 .secondary-menu-row {
-  width: 10000px;
+  width: 5000px;
   height: 180px;
   margin: auto;
   display: grid;
